# exarp-go

./: .cspell.json  .cursorignore  .cursorrules  .exarp_wisdom_seen  .gitignore  .golangci.yml  .gomarklint.json  .pytest.ini  AFM_SERVICE.md  CLAUDE.md  CURSOR_AFM_MODEL.md  EXTERNAL_CODE_COPIED.md  INSTALL_AFM.md  MIGRATION_COMPLETE.md  MIGRATION_FINAL_SUMMARY.md  Makefile  PLANNING_LINKS_HELPERS_TEST.md  PROJECT_SCORECARD_WITH_WISDOM.md  PROMPTS_RESOURCES_MIGRATION.md  README.md  SCORECARD_SUMMARY.md  TAILSCALE_AFM.md  TEST_RESULTS.md  Taskfile.yml  add_afm_models.sh  additional_cleanup_opportunities.md  buf.yaml  cleanup_additional.sh  cleanup_ubuntu.sh  coverage.out  cursor_afm_models.json  custom_report.md  dev-go.sh  dev.sh  devwisdom-go-scorecard.md  exarp-go.plan.md  go.mod  go.sum  legacy_duplicate_analysis.json  mcp.json  (+17 more)
.cspell/: project-words.txt
.cursor/: automa_patterns.json  exarp_file_watcher.py  exarp_patterns.json  hooks.json.example  mcp.json.backup  mcp.json.backup-20260108-162842
.cursor-plugin/: plugin.json
.devwisdom/: consultations-2026-01-07.jsonl  consultations.jsonl
.exarp/: security_features.py  security_manifest.json
.github/: agentscope_eval.yaml  dependabot.yml
.mcpower/: app_uid
.opencode/: package.json
.todo2/: state.todo2.json
ansible/: .ansible-lint  QUICKSTART.md  QUICK_START.md  README.md  RUN_DEVELOPMENT_SETUP.md  ansible.cfg  requirements.yml  run-dev-setup.sh  start-dev-setup.sh
bridge/: agent_evaluation.py  execute_resource.py  execute_tool.py  execute_tool_daemon.py  get_prompt.py  statistics_bridge.py
(+1085 files in other folders)
