[project]
name = "exarp-go"
version = "0.1.0"
description = "Python bridge scripts for Go MCP server"
readme = "README.md"
requires-python = ">=3.10"
# No runtime dependencies - bridge scripts use standard library only
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bridge"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
